fixture of alignment

--- a/UI/css/homeStyles.css
+++ b/UI/css/homeStyles.css
@@ -445,3 +445,9 @@
     }
 
 }
+
+/* ----------- contact section -------- */
+.contact__form {
+    max-width: 50vw;
+    margin: auto;
+}
